Fix crash opening/minimizing window that has onfocus/onblur=window.close(). b=296300 r+sr=bzbarsky a=asa